After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 604848 - disk mounter doesn't have an option for unmounting volumes without ejecting
disk mounter doesn't have an option for unmounting volumes without ejecting
Status: RESOLVED FIXED
Product: gnome-applets
Classification: Other
Component: Disk Mounter (drivemount)
2.28.x
Other Linux
: Normal normal
: ---
Assigned To: gnome-applets Maintainers
gnome-applets Maintainers
: 354876 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2009-12-17 17:50 UTC by Massimo Dal Zotto
Modified: 2011-06-13 10:44 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Massimo Dal Zotto 2009-12-17 17:50:51 UTC
If I insert a cdrom or usb disk it is mounted automatically by Disk Mounter but then I have no options for unmounting it from the Disk Mounter menu without ejecting it. And if I Eject an usb disk it disappears from Disk Mounter and there is no way to remount it without physically removing and reinserting it. If the disk has two or more partitions the Eject menu unmounts all of them and there is no way to unmount only one.

An "Unmount" option would be useful in the following cases:

- insert a cdrw, look at contents and decide to blank it

- insert an usb disk that you want to mount in a guest operating system under vmware or virtualbox

- insert a multi-partition disk and unmount some of the partitions

I suggest the following menu options for Disk Mounter:

if disk mounted:
  Open
  Unmount
  Eject

if disk not mounted:
  Open (mount and open)
  Mount (mount and don't open)
  Eject
Comment 1 Enrico Minack 2011-06-13 10:37:00 UTC
The unmount action was not available for ejectable media, which I fixed. I think your use cases are very valid. See http://git.gnome.org/browse/gnome-applets/commit/?id=be2f99f0e4dfee124e380cd6d303bae3372c088b
Comment 2 Enrico Minack 2011-06-13 10:44:11 UTC
*** Bug 354876 has been marked as a duplicate of this bug. ***