drivemount: allow unmount without eject

Based on gnome-applets commit: be2f99f0e4dfee124e380cd6d303bae3372c088b
From: Enrico Minack <enrico-minack@gmx.de>
Gnome bug: https://bugzilla.gnome.org/show_bug.cgi?id=604848